--- a/README
+++ b/README
@@ -46,3 +46,8 @@ Configuration
 -------------
 The configuration of dwm is done by creating a custom config.h
 and (re)compiling the source code.
+
+Shortcut key
+------------
+- Adjust window transparency： Alt+shift+a/Alt+shift+a
+
